[gd_scene load_steps=4 format=1]

[ext_resource path="res://resources/default_theme.thm" type="Theme" id=1]
[ext_resource path="res://scripts/Start.gd" type="Script" id=2]
[ext_resource path="res://assets/graphics/splash.png" type="Texture" id=3]

[node name="Start" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 64, 80 )
texture = ExtResource( 3 )

[node name="Version" type="Label" parent="."]

margin/left = 136.0
margin/top = 8.0
margin/right = 184.0
margin/bottom = 16.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "v 1.\?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Buttons" type="VBoxContainer" parent="."]

margin/left = 128.0
margin/top = 56.0
margin/right = 192.0
margin/bottom = 144.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="Play" type="Button" parent="Buttons"]

margin/right = 64.0
margin/bottom = 13.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "PLAY"
flat = true
align = 2

[node name="Options" type="Button" parent="Buttons"]

margin/top = 17.0
margin/right = 64.0
margin/bottom = 30.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "OPTIONS"
flat = true
align = 2

[node name="Quit" type="Button" parent="Buttons"]

margin/top = 34.0
margin/right = 64.0
margin/bottom = 47.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "QUIT"
flat = true
align = 2

[node name="MOTD" type="Label" parent="."]

margin/left = 2.0
margin/top = 2.0
margin/right = 82.0
margin/bottom = 34.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "I am a leaf on the wind\nwatch how I soar"
align = 2
valign = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]

[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]


